@@ -1,13 +1,17 @@
 package engine;
 
+import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class Utils {
 
     public static String readFile(String filePath) {
         String str;
         try {
-            str = new String(Utils.class.getClassLoader().getResourceAsStream(filePath).readAllBytes());
+            str = new String(Files.readAllBytes(Paths.get(filePath)));
         } catch (IOException e) {
             throw new RuntimeException("Error reading file [" + filePath + "]", e);
         }
